--- a/docker_k8s/postgresql.yml
+++ b/docker_k8s/postgresql.yml
@@ -1,34 +1,37 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: gitbucket
+  name: postgres-depl
   namespace: gitbucket
   labels:
-    app: gitbucket
+    app: postgres-db
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: gitbucket
+      app: postgres-db
   template:
     metadata:
       labels:
-        app: gitbucket
+        app: postgres-db
     spec:
       containers:
-      - name: gitbucket
-        image: myregistry444.azurecr.io/gitbucket:v4
+      - name: postgresql
+        image: postgres:14-alpine
         ports:
-        - containerPort: 8080
+        - containerPort: 5432
         env:
-        - name: GITBUCKET_DB_URL
-          value: "jdbc:postgresql://$(POSTGRESQL_SERVICE_SERVICE_HOST):5432/gitbucket"
-        - name: GITBUCKET_DB_USER
+        - name: POSTGRES_DB
+          valueFrom:
+            secretKeyRef:
+              name: postgres-secret
+              key: dbname
+        - name: POSTGRES_USER
           valueFrom:
             secretKeyRef:
               name: postgres-secret
               key: user
-        - name: GITBUCKET_DB_PASSWORD
+        - name: POSTGRES_PASSWORD
           valueFrom:
             secretKeyRef:
               name: postgres-secret
@@ -38,13 +41,12 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: gitbucket-service
+  name: postgresql-service
   namespace: gitbucket
 spec:
-  type: LoadBalancer
   selector:
-    app: gitbucket
+    app: postgres-db
   ports:
   - protocol: TCP
-    port: 80
-    targetPort: 8080
+    port: 5432
+    targetPort: 5432
