--- a/ansible/roles/config_nginx/tasks/main.yml
+++ b/ansible/roles/config_nginx/tasks/main.yml
@@ -13,6 +13,10 @@
     vars:
       site_path: /home/rand/static-website-example/
 
+# in the example site above I added the following line in index.html:
+# <h2><!--# echo var="hostname" default="unknown_host" --></h2>
+# after <h1>Dimension</h2>, to display hostname of the machine (for LB)
+
   - name: copy nginx config
     template:
       src: templates/nginx.conf.j2
